--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,9 +140,6 @@ section {
   font-size: 16px;
 }
 
-.intro {
-  text-align: center;
-}
 
 .intro p {
   line-height: 1.7;
@@ -153,7 +150,6 @@ section {
 }
 
 .steps {
-  text-align: center;
   background: #fce138;
 }
 
@@ -182,11 +178,12 @@ section {
 }
 
 .section-title {
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0 auto 35px auto;
+  width: 50%;
   font-size: 55px;
   color: #024e76;
-  margin-bottom: 35px;
-  padding: 0 100px 20px 100px;
-  display: inline-block;
   border-bottom: 3px solid;
 }
 
@@ -199,7 +196,10 @@ section {
 }
 
 .trainers {
-  text-align: center;
+  }
+
+.flex-row {
+  display: flex;
 }
 
 .trainer {
@@ -247,7 +247,6 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
